# maths

./: CMakeLists.txt  README.md
.github/workflows/: cmake-ubu24-clang18-ninja.yml  cmake-ubuntu-modules-template.yml  cmake-ubuntu-template.yml  cmake-windows-latest.yml  cmake-windows-template.yml  mac-cmakeninja-clang.yml  mac-cmakeninja-template.yml  ubuntu-cmakeninja-clang18.yml  ubuntu-cmakeninja-clang20.yml  ubuntu-cmakeninja-clang22.yml  ubuntu-cmakeninja-gcc14.yml  ubuntu-cmakeninja-gcc15.yml  ubuntu-cmakeninja-gcc16.yml  ubuntu-cmakeninja-template.yml  ubuntu-modules-clang18.yml  ubuntu-modules-clang20.yml  ubuntu-modules-clang22.yml  ubuntu-modules-gcc14.yml  ubuntu-modules-gcc15.yml  ubuntu-modules-template.yml
ci_scripts/: check_installed_headers.sh
cmake/: icm_build_failure_testing.cmake  module_definitions.cmake
docs/: index.md
docs/ref/: config.md  constexprmath.md  flags.md  grid.md  hdf.md  histo.md  index.md  interval.md  mat.md  mat22.md  mat33.md  mat44.md  mathconst.md  pca.md  polysolve.md  quat.md  randn.md  range.md  scale.md  vec.md  vvec.md  winder.md
docs/tutorial/: vvec.md
examples/: CMakeLists.txt  bezcurve.cpp  hexgrid.cpp  mat33.cpp  mat44.cpp  mat44_frombasis.cpp  mat_nonsquare.cpp  matrix_eigenvalues.cpp  nelder_mead.cpp  readme.cpp  scale.cpp  vonmises.cpp  vvec.cpp
modules/: readme.md
modules/clang_ex/: Hello.cppm  build.sh  buildgcc.sh
modules/cmake_ex/: CMakeLists.txt  build.readme.txt  foo.cpp  foo_part.cpp  main.cpp
modules/cmake_range/: CMakeLists.txt  build.readme.txt  use_include_range.cpp  use_include_range2.cpp  use_vec.cpp  use_vec2.cpp
modules/cmake_range/sm/: export  random  range  vec
morph/: CMakeLists.txt  algo.h  bezcoord.h  bezcurve.h  bezcurvepath.h  boxfilter.h  cartgrid.h  constexpr_math.h  geometry.h  grid.h  gridfeatures.h  hdfdata.h  hex.h  hexgrid.h  histo.h  mat44.h  math.h  quaternion.h  random.h  range.h  rect.h  scale.h  vec.h  vvec.h  winder.h
morph/optimization/: nm_simplex.h
sj/: CMakeLists.txt  algo  algo.h  bezcoord  bezcoord.h  bezcurve  bezcurve.h  bezcurvepath  bezcurvepath.h  bootstrap  bootstrap.h  boxfilter  boxfilter.h  cartgrid  cartgrid.h  constexpr_math  constexpr_math.h  crc32  crc32.h  flags  flags.h  geometry  geometry.h  grid  grid.h  gridfeatures  gridfeatures.h  hdfdata  hdfdata.h  hex  hex.h  hexgrid  hexgrid.h  hexyhisto  hexyhisto.h  histo  histo.h  mat22  mat22.h  mat33  (+23 more)
sj/optimization/: nm_simplex  nm_simplex.h
sm/: CMakeLists.txt  algo  algo.cppm  anneal  anneal.cppm  base64  base64.cppm  bessel_i0  bessel_i0.cppm  bezcoord  bezcoord.cppm  bezcurve  bezcurve.cppm  bezcurvepath  bezcurvepath.cppm  binomial  bootstrap  bootstrap.cppm  boxfilter  cartgrid  cartgrid.cppm  centroid  centroid.cppm  config  config.cppm  constexpr_math  constexpr_math.cppm  crc32  edgeconv  evenspacing.cppm  flags  flags.cppm  geometry  geometry.cppm  geometry_polyhedra  geometry_polyhedra.cppm  grid  grid.cppm  gridfeatures  hdfdata  (+52 more)
sm/optimization/: nm_simplex
tests/: CMakeLists.txt  algo_1.cpp  algo_3.cpp  algo_4.cpp  algo_ransac.cpp  algo_roundtocol1.cpp  algo_sigfigs1.cpp  array_asmapkey1.cpp  bez1.cpp  bez2.cpp  bezcurves.cpp  bezfit.cpp  bezmatrix.cpp  bezsplit.cpp  bootstrap1.cpp  boxfilter1.cpp  cartgrid1.cpp  cartgrid_gridshiftcoords.cpp  cartgrid_shiftindicesbymetric.cpp  config1.cpp  constexpr_math1.cpp  evenspacing1.cpp  flags1.cpp  geometry.cpp  geometry_2.cpp  geometry_2.cppm  geometry_3.cpp  geometry_3.cppm  geometry_4.cpp  geometry_4.cppm  geometry_5.cpp  geometry_5.cppm  geometry_6.cpp  geometry_6.cppm  geometry_sph_projections.cpp  geometry_sph_projections.cppm  geometry_xyz_to_latlong.cpp  geometry_xyz_to_latlong.cppm  graham_scan_1.cpp  grid1.cpp  (+227 more)
vcpkg/: vcpkg.json
